--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Optical Designer"
   location         : "Rochester, NY"
-  employer         : University of Rochester
+  employer         : "University of Rochester"
   pubmed           :
   googlescholar    :
   email            : abriggs6@u.rochester.edu
