--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   #  url: /year-archive/
 
   - title: "Resume"
-    url: /resume/
+    url: /_pdf/F2020-Resume.pdf
 
   #- title: "Guide"
   #  url: /markdown/
