--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Adam Briggs"
 title_separator          : "-"
 name                     : &name "Adam Briggs"
 description              : &description ""
-url                      : https://AdamBriggs.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://adambriggs.xyz # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "AdamBriggs/AdamBriggs.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
